feat: 서버 배포시 resource 파일을 정상적으로 불러오도록 수정